# giterate

./: README.md  giterate.cabal
app/: Main.hs
src/: Giterate.hs
src/Giterate/: Internal.hs  Project.hs  Util.hs
test/: Spec.hs  TestUtil.hs
