name:                giterate
version:             0.1.0.0
synopsis:            Git-powered project management
description:         Please see README.md
homepage:            http://github.com/KenetJervet/giterate#readme
license:             BSD3
license-file:        LICENSE
author:              Savor d'Isavano
maintainer:          anohigisava@gmail.com
copyright:           2016 Savor d'Isavano
category:            System
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Giterate
                     , Giterate.Project
  other-modules:       Giterate.Internal
  build-depends:       base >= 4.7 && < 5
                     , directory >= 1.2
                     , filepath >= 1.4
                     , process >= 1.2
                     , time >= 1.5
                     , transformers >= 0.4
                     , uuid >= 1.3
  default-language:    Haskell2010

executable giterate
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , giterate
                     , optparse-applicative >= 0.12
  default-language:    Haskell2010

test-suite giterate-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test, src
  main-is:             Spec.hs
  other-modules:       Giterate
                     , Giterate.Internal
                     , TestUtil
  build-depends:       base
                     , HUnit >= 1.3
                     , giterate
                     , temporary >= 1.2
                     , directory >= 1.2
                     , filepath >= 1.4
                     , process >= 1.2
                     , time >= 1.5
                     , transformers >= 0.4
                     , uuid >= 1.3
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/giterate
